--- a/DDPTP/templates/header.html
+++ b/DDPTP/templates/header.html
@@ -9,5 +9,8 @@
         <li class="nav-item">
             <a class="nav-link" href="/experiments">Experiments</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+        </li>
     </ul>
 </nav>
